force-app/main/default/objects/Student_Advising_Session__c/Student_Advising_Session__c.object-meta.xml
<CustomObject>
    <label>Student Advising Session</label>
    <nameField>
        <displayFormat>Session ID - {0000}</displayFormat>
        <label>Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Advising Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>