force-app/main/default/objects/Student_Advising_Session__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Student Advising Sessions (Advisor)</relationshipLabel>
    <relationshipName>Student_Advising_Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>