force-app/main/default/objects/Student_Advising_Session__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <label>Session Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>