force-app/main/default/objects/Student_Advising_Session__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Student Advising Sessions</relationshipLabel>
    <relationshipName>Student_Advising_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>